--- a/index.html
+++ b/index.html
@@ -1196,13 +1196,19 @@ The title was not a meaningful insight and I felt that the analysis might benefi
 <blockquote>
 <p>While I think I gained something out of it, these changes did not result in a new much better structure but was part of trials and errors in the process.</p>
 </blockquote>
+<blockquote>
+<p>Going through the data of a group named »general requirements« I noted that a big part of the data was concerned with balancing<br />
+<em>functional</em> or <em>practical</em> requirements (price, readability etc.) with requirements concerning <em>style</em> (using colors, being innovative)</p>
+</blockquote>
+<blockquote>
+<p>Thus, I renamed the group to »trying to combine aesthetics and functionality«. As the new title was more specific some data needed to be taken out, put into other groups or to the temporary »misc« group.</p>
+</blockquote>
 <p><br />
 <br />
- &gt; Going through the data of a group named »general requirements« I noted &gt; that a big part of the data was concerned with balancing<br />
-&gt; <em>functional</em> or <em>practical</em> requirements (price, readability etc.) with &gt; requirements concerning <em>style</em> (using colors, being innovative) &gt; &gt; Thus, I renamed the group to »trying to combine aesthetics and &gt; functionality«. As the new title was more specific some data needed to &gt; be taken out, put into other groups or to the temporary »misc« group.</p>
-<p><br />
-<br />
- &gt; The previous examples were concerned with whole themes and thus focused on the macro level. Sometimes you just move data itself, without any trigger like renaming, just because you found a better fit. For example <em>»using the maximum possible height on a sheet of paper«</em> was grouped into »media«. Later, I moved it to <em>»budget«</em> because budget is something the user is directly concerned with, whereas media is even more abstract. The group <em>»budget«</em> was then later renamed <em>»having little money and resources«</em>, expressing that a part of the participants work was finding out how they could make the most out of a small budget (<em>»using the maximum possible height on a sheet of paper«</em> is a practice that results from that concern.)</p>
+ The previous examples were concerned with whole themes and thus focused on the macro level. Sometimes you just move data itself, without any trigger like renaming, just because you found a better fit.</p>
+<blockquote>
+<p>For example <em>»using the maximum possible height on a sheet of paper«</em> was grouped into »media«. Later, I moved it to <em>»budget«</em>, because budget is something the user is directly concerned with, whereas media is even more abstract. The group <em>»budget«</em> was then later renamed <em>»having little money and resources«</em>, expressing that a part of the participants work was finding out how they could make the most out of a small budget (<em>»using the maximum possible height on a sheet of paper«</em> is a practice that results from that concern.)</p>
+</blockquote>
 <h3 id="create-subgroups">Create Subgroups</h3>
 <p>Some groups may grow rather big, especially if their themes are not insights but are based on mere commonalities of underlying data (like »dealing with color«). This is an excellent opportunity to develop themes by creating subgroups. The process of developing subgroups is like in <a href="#firstStructure">»Develop a first structure«</a> (just inside the group): Move similar data in proximity and try to create clear-cut insights if possible. In this process you might find a more suitable way to state the theme of the main group as well.</p>
 <blockquote>
@@ -1248,9 +1254,10 @@ Before:</p>
 </ul></li>
 </ul>
 </blockquote>
-<p><br />
-<br />
- &gt; Sometimes you first sort the data under the overarching title or principle and then move it to an already existing subgroup later: &gt; &gt; The utterance: »Its bad that you can do imprecise things here, compared to programming (talking about Illustrator)« was first sorted into »Media« and subsequently put into »using the right media«</p>
+<blockquote>
+<p>Sometimes you first sort the data under the overarching title or principle and then move it to an already existing subgroup later:</p>
+<p>The utterance: »Its bad that you can do imprecise things here, compared to programming (talking about Illustrator)« was first sorted into »Media« and subsequently put into »using the right media«</p>
+</blockquote>
 <h2 id="wrap-it-up-1">Wrap it up</h2>
 <figure>
 <img src="images/lego_houseFinished.jpg" alt="it’s done! (though you could still change some things or two…)" /><figcaption>it’s done! (though you could still change some things or two…)</figcaption>
