formatting list headlines

--- a/index.html
+++ b/index.html
@@ -875,14 +875,32 @@ This is useful when designing, since you can refer to the title instead of consi
 <li>I look at the assembled bike and think: nobody else has the same</li>
 </ul>
 <p>If we put the pieces of data which mention the same things in the same group we get these two groups:</p>
-<p><strong>Theme: Bikes</strong> - I look at the assembled bike and think: nobody else has the same - When my bike is broken and I need to get to work I can fix my bike quickly <strong>Theme: Furniture</strong> - The cabinet’s door was loose. It annoyed me, so I repaired it. - The shelf looks not as clean as a bought one, but it is mine</p>
+<p><strong>Theme: Bikes</strong></p>
+<ul>
+<li>I look at the assembled bike and think: nobody else has the same</li>
+<li>When my bike is broken and I need to get to work I can fix my bike quickly</li>
+</ul>
+<p><strong>Theme: Furniture</strong></p>
+<ul>
+<li>The cabinet’s door was loose. It annoyed me, so I repaired it.</li>
+<li>The shelf looks not as clean as a bought one, but it is mine</li>
+</ul>
 </blockquote>
 <p>Organizing the data by this »same things mentioned«-method would help us find data concerned with a specific thing or assessment: If we want see everything that concerned furniture we can go through the data in the »furniture« group; If we would like to know what people liked we could look it up in a group titled »good«.</p>
 <p>However, organizing by the »same things mentioned«-method has its shortcomings: A theme named »furniture« communicates only that the underlying data has <em>something</em> to do with furniture. You still need to go through the underlying data to find out what people did with their furniture and what motivates them or which problems they face. The names of themes created by organizing by the »same things mentioned«-method are just labels for the content and have no meaning on its own.</p>
 <p>Imagine we would not create the themes by looking for same things being mentioned but by the insights we drew from the data in the group by focusing on the meaning of activities, problems and goals for the participants.</p>
 <p>If we take the data about DIY again this could look like this:</p>
 <blockquote>
-<p><strong>Theme (based on an insight about the participants): Participants need to »make things work«</strong> - The cabinet’s door was loose. It annoyed me, so I repaired it. - When my bike is broken and I need to get to work with it the next day I can fix my bike quickly <strong>Theme (based on an insight about the participants): Good: DIY gives sense of individuality</strong> - The shelf looks not as clean as a bought one, but it is mine - I look at the assembled bike and think: nobody else has the same</p>
+<p><strong>Theme (based on an insight about the participants): Participants need to »make things work«</strong></p>
+<ul>
+<li>The cabinet’s door was loose. It annoyed me, so I repaired it.</li>
+<li>When my bike is broken and I need to get to work with it the next day I can fix my bike quickly</li>
+</ul>
+<p><strong>Theme (based on an insight about the participants): Good: DIY gives sense of individuality</strong></p>
+<ul>
+<li>The shelf looks not as clean as a bought one, but it is mine</li>
+<li>I look at the assembled bike and think: nobody else has the same</li>
+</ul>
 </blockquote>
 <p>If we organize data by themes based on the insights about the participants and summarize that insight in the group’s title, the theme’s title is a useful piece of information on its own: It is not just for accessing the data, it is an empirically based principle we can follow when we design.</p>
 <p>If you design, let’s say, for a DIY-Online community, a theme based on an insight, like »DIY gives as sense of ownership« may inspire the implementation of a function which allows people to share their designs and customizations. The insight that sometimes DIY is just about fixing things may lead to the provision of a wiki for collecting best practices for doing common repairs and maintenance.</p>
@@ -1345,11 +1363,11 @@ Before:</p>
 <p>»We, a team of students of the Weimar University, want to improve the free layout program frame drawer and want the application to match your workflow and needs. Therefore we would like to gather some insights in the way you work.</p>
 <p>If you would like to support us, someone from our team would visit your workplace and ask you some questions and look over your shoulder while you work. This would take approximately 1h.</p>
 <p>All participants get a $10 voucher for the university's cafeteria. If you would like to participate (or have further questions) please write a mail to jan.dittrich@example.com«</p>
-<p><em>Data gathering</em></p>
+<p><strong>Data gathering</strong></p>
 <p>We gathered the data by asking open questions in a semi-structured interviews. In addition, we observed the research participants doing their work. The participants were invited to just continue to work on what they would have done when we would not have been there.</p>
 <p>The data gathering was done by single researchers, though one session was done by two team members together (one taking notes, the other asking the questions)</p>
 <p>We recorded the data by doing an audio recording of questions and answers in addition to handwritten notes. We photographed and sketched participants during key activities and made photos and sketches of tools important to their work.</p>
-<p><em>Analysis</em></p>
+<p><strong>Analysis</strong></p>
 <p>After the research sessions we gathered all notes and supplemented forgotten or unclear data by using the audio recordings and sketches. We annotated all data for possible meanings and interrelations to create a preliminary scheme for organizing the data into meaningful principles. This patterns served as a starting point for organizing and reordering the data during several iterations. Thus, the process was similar to affinity diagramming (Beyer, Holtzblatt) or Thematic Analysis (Virginia, Clarke)</p>
 </blockquote>
 <h3 id="describe-site-and-sample">Describe site and sample</h3>
