--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <ul>
 <li><a href="#license">License</a><ul>
 <li><a href="#contributers">Contributers</a></li>
+<li><a href="#suggestions-and-feedback">Suggestions and Feedback</a></li>
 </ul></li>
 <li><a href="#introduction">Introduction</a><ul>
 <li><a href="#why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</a></li>
@@ -144,12 +145,15 @@
 </nav>
 <h1 id="license">License</h1>
 <p>Text and images are under the following License (if not stated otherwise)</p>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://jdittrich.github.io/userNeedResearchBook/" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/jdittrich" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Libraries used for this webpage have their own licenses and are <em>not</em> covered by the Creative Commons license above.</p>
 <h2 id="contributers">Contributers</h2>
 <ul>
 <li><a href="https://github.com/lisacharlotterost">lisacharlotterost</a></li>
 </ul>
+<h2 id="suggestions-and-feedback">Suggestions and Feedback</h2>
+<p>If you are on github: <a href="https://github.com/jdittrich/userNeedResearchBook/issues">file an issue</a></p>
+<p>Otherwise you can write me a mail: <em>dittrich.c.jan AT gmail DOTcom</em></p>
 <h1 id="introduction">Introduction</h1>
 <!-- what do you want to find our may be incorported somewhere here -->
 <h2 id="why-should-i-use-the-methods-described-in-this-book">Why should I use the methods described in this book?</h2>
