find people restructured

--- a/index.html
+++ b/index.html
@@ -241,23 +241,24 @@
 </blockquote>
 <p>When you reach out to communities for recruiting be sure to comply to the rules of the organizations or social groups involved. It does not help your research if the community you target gets upset with you for violating their privacy and customs. If you are unsure, just ask. These people you ask, lets say a clergyman or a meetup organizer may even be able to set you up with people who can help you. Once you started your research you can ask participants if they know other people who match your ideas of possible participants. It is likely that they know some other people who work in the same job or have similar hobbies. (In the literature this is also called »Snowball sampling«)</p>
 <h2 id="how-many-participants-do-i-need">How many participants do I need?</h2>
-<p>When estimating how many participants you need, consider how many resources (time and/or money) you can spend on doing the research. Each additional participant gives you additional data and a broader view on your possible users. However, each research session needs time do and adds to the amount of data to be analyzed – so plan accordingly.</p>
-<p>You may think that more is better and that you just could shorten each session, ask fewer questions and skip observing the participants. But you need time if you want to find out about the »how« and »why« of the participants’ work . Several sessions in hurry will lead to less useful results than research with one participant done right. Nevertheless, only doing research on very few users will restrict the variance of data – like noticing that there may be several ways to do the same thing. As well you might not see which patterns are consistent among several people and which vary – which would certainly be impossible if you only had one participant.</p>
 <p>There are no clear cut rules of how many participants are enough. However, most of my projects have between 3 and 8 participants. If I really need to be sure that what I notice is consistent I'd do research with 10, but that is about the limit I can manage on my own.</p>
+<p>When estimating how many participants you need, consider how much resources (time and/or money) you can spend on doing the research. Each additional participant gives you additional data and a broader view on your possible users.However, each research session needs time do and adds to the amount of data to be analyzed – so plan accordingly.</p>
 <p>An efficient way of involving the »right« amount of participants is doing your research iteratively: start with three or four participants and analyse the data (how this is done is descibed in the section on <a href="#Analysis">Analysing Data</a>)</p>
 <p>Take a look at the (preliminary) findings: If the results seem clear and consistent, you may do research with few additional participants to refine and check and to explore details – or, if time is up, leave it the way it is.</p>
 <p>If preliminary findings are unclear or contradictory, you may need to involve more participants.</p>
 <p>Reasons for the such unsatisfactory results could be:</p>
 <ul>
-<li>Your research encompasses different groups of people with different needs – For example the groups students and professors share some traits, but many characteristics will vary.</li>
+<li>Your research encompasses different groups of people with different needs – For example the groups »students« and »professors« share some traits, but many characteristics will vary.</li>
 <li>The topic of your research is too broad – for example, »How do people do design« is very broad, »How do interface designers involve specifications of user research and engineers in their designs« is more specific.</li>
 <li>Even if your research is focused and there is only one group of people involved, the actual patterns just vary.</li>
 </ul>
 <p>In all these cases you can involve more participants – but before you do involve more participants try to check if you…</p>
 <ul>
 <li>…need to clarify your research topic (to focus your efforts)</li>
-<li>… need to specify the involved groups (to recruit the right participants)</li>
+<li>…need to specify the involved groups (to recruit the right participants)</li>
 </ul>
+<p>You may think that conducting user research with more participants is generally better; you just could shorten each session, ask fewer questions and skip observing the participants. But you need time with each participant if you want to find out about the »how« and »why« of the participants’ work. Several sessions in hurry will lead to less useful results than research with one participant done right.</p>
+<p>Nevertheless, only doing research on very few users will restrict the variance of data – like noticing that there may be several ways to do the same thing. As well you might not see which patterns are consistent among several people and which vary – which would certainly be impossible if you only had one or two participants. However, despite the constraints of such small samples they can still lead the helpful insights.</p>
 <h1 id="prepare-the-research-session">Prepare the research session</h1>
 <h2 id="questiontopics">What do you want to find out?</h2>
 <p>Before you collect the data, you should specify what you want to find out. Based on that you can gather questions you want to ask. Let’s look at some topics that might be of interest exploring:</p>
