--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li><a href="#equipment">Equipment</a></li>
 </ul></li>
 <li><a href="#data-gathering">Data Gathering</a><ul>
-<li><a href="#inform-and-get-consent">Inform and get Consent</a></li>
+<li><a href="#inform-and-ask-for-their-consent">Inform and ask for their Consent</a></li>
 <li><a href="#modes-of-gathering-data">Modes of gathering data</a><ul>
 <li><a href="#getting-answers">Getting answers</a></li>
 <li><a href="#observation">Observation</a></li>
@@ -264,15 +264,15 @@
 <p>Before you collect the data, you should specify what you want to find out. Based on that you can gather questions you want to ask. Let’s look at some topics that might be of interest exploring:</p>
 <p>I usually have three aspects I think of when I prepare my questions:</p>
 <ol type="1">
-<li>Activities, things the user does</li>
-<li>Motivations, what the user wants to archive, what is important for him/her</li>
-<li>Problems: things that interfere with the users activities and motivations</li>
+<li>Motivations, what the user wants to archive, what is important for him/her?</li>
+<li>Activities, what does the user?</li>
+<li>Problems: what interferes with the users activities and motivations?</li>
 </ol>
 <p>There could be many other aspects, but I find these three good because</p>
 <ul>
-<li>they cover a wide range of possible topics questions</li>
-<li>they cover design relevant topics</li>
-<li>three points are easy enough to remember even in the midst of research.</li>
+<li>They cover a wide range of possible topics questions</li>
+<li>They cover design relevant topics</li>
+<li>They can be easily remembered even in the midst of research: Three points are few and in addition you can use the mnemonic M-A-P: <strong>M</strong>otivations,<strong>A</strong>ctivities, <strong>P</strong>roblems.</li>
 </ul>
 <p>Let me show you the questions I came up with for finding out about the needs of designers who create layouts.</p>
 <h4 id="activities">Activities</h4>
@@ -334,20 +334,21 @@
 <li>Pencil or Pen (Don't forget to bring backups!)</li>
 <li>Something to write on. A clipboard is great.</li>
 </ul></li>
-<li>Audio Recording
+<li>Audio Recording (recommended)
 <ul>
 <li>audio recorder or smartphone</li>
 </ul></li>
-<li>Photos and video
+<li>Photos and video (recommended)
 <ul>
-<li>a digital camera</li>
+<li>a digital camera or smartphone</li>
 </ul></li>
 </ul>
+<p>You should get to know your equipment before you start the actual data collection. So be sure to know the essential operations to actually make a photo and start and stop the recording. Check the audio quality by putting the phone/recorder roughly a meter away from you and saying some sentences in normal loudness. Listen to the recording to test if you can (easily) understand what you said.</p>
 <h1 id="data-gathering">Data Gathering</h1>
 <p>In this chapter we will learn how to gather data to get to know about the activities, motivations and problems of our research participants. We will gather informations by listening to descriptions and explanations of our participants and by observing them working. The resulting data will be text and images.</p>
 <p>Contrary to a common misconception of user need research, our inquiry will not be (directly) about future ideas and design – we are will not ask »do you think that a [gadget] would help you?«. It is very hard to reliably guess if something would be a great thing to have in the future and the answer would tell you not much about the actual activities, motivations or problems of the participant. Instead of dealing with ideas directly we will find out about the how and why of our participant’s activities and thus set a reliable foundation for our designs.</p>
 <p>We see our participants as competent in what they do: they are experts in their fields and in their daily work. Emphasizing the expertise of the participants is contrary to the idea of designers and programmers as people who improve the lives of those who »don’t get it«. Instead of this, we assume that the participants of our research have a reason of doing their work the way they do it. We try to find out these reasons behind their activities. Getting to know the »how« and »why« of the users actions will allow us to evaluate our ideas (does it match their ideas of good work?) and to get inspiration for new ideas (how can we support this motivation?)</p>
-<h2 id="inform-and-get-consent">Inform and get Consent</h2>
+<h2 id="inform-and-ask-for-their-consent">Inform and ask for their Consent</h2>
 <p>When you have found a participant, a place, a time and have your equipment ready we can start with the actual research session.</p>
 <p>My advice is simple: Be friendly. If you come to their place (which is preferable, since you can observe the actual context) be a nice guest; if they come to your place or you meet in some »neutral space«, be a nice host.</p>
 <p>Greet the participant and thank for his/her time:</p>
@@ -616,7 +617,7 @@ how the final product should be like.</p>
 <p>A typical use of that method is asking for further information on something that was mentioned and which interests you in particular. In this case, refer back to the information and ask for elaboration.</p>
 <p>Here are some examples:</p>
 <blockquote>
-<p>That typography settings – you said they are far more precise than the ones in wordprocessors. Can you explain me how these differences help you to design compared to the ones in wordprocessors?</p>
+<p>That typography settings – you said they are far more precise than the ones in word processors. Can you explain me how these differences help you to design compared to the ones in word processors?</p>
 </blockquote>
 <p>or</p>
 <blockquote>
@@ -627,22 +628,21 @@ how the final product should be like.</p>
 </figure>
 <p>You can refer back to the answer which was just given and continue with the same topic. But referring back can be used as well to provide a transition between <em>different</em> topics. This is especially useful if the participant is talking about something that deviates much from what you are interested in. By referring to something previously mentioned or demonstrated you can show that you have been attentive and thus make the topic change less intrusive:</p>
 <blockquote>
-<p>»…so this was a design made by some artist. It was really wired, I shared the office with him for some time.</p>
-<p>He always came with that dog of him which…« »Hmm…you previously talked about creating a cover for the book –</p>
-<p>you said that you try several designs. Can you describe how you try them?«</p>
+<p>»…so this was a design made by some artist. It was really wired, I shared the office with him for some time. He always came with that dog of him which…«</p>
+<p>»Hmm…you previously talked about creating a cover for the book – you said that you try several designs. Can you describe how you try them?«</p>
 </blockquote>
 <h3 id="referring-back-to-check-your-understanding">Referring back to check your understanding</h3>
-<p>You can refer back to answers to check your grasp of what the participant talked about. In this case, even closed questions are ok.</p>
+<p>You can refer back to answers to check your grasp of what the participant talked about. In this case, even closed (yes/no) questions are ok.</p>
 <blockquote>
 <p>»I saw you choose the color from that palette down there – is this the same palette you choose the background color from?« »No, it is not – the palette I am using here is…«</p>
 </blockquote>
 <p>or</p>
 <blockquote>
-<p>»So: If I want to print something first I need to ask for their color profile, when I have this, I load it in InDesign, choose the profile in the pdf dialog and then export it?« »Yes. I usually to a test afterwards by opening the pdf in addition«</p>
-</blockquote>
-<p><br />
+»So: If I want to print something first I need to ask for their color profile, when I have this, I load it in InDesign, choose the profile in the pdf dialog and then export it?« »Yes. I usually to a test afterwards by opening the pdf in addition«<br />
 <br />
- Jumping back to some previously mentioned topic may seem difficult, since you need to remember some particular information (to refer to it later) while carrying on with the research. However, it is not that hard – just give it a try. As well, keep in mind that you can make brief notes reminding you of things that are of interest. With a look on your note sheet they will return to your memory in case you forgot about them.</p>
+
+</blockquote>
+<p>Jumping back to some previously mentioned topic may seem difficult, since you need to remember some particular information (to refer to it later) while carrying on with the research. However, it is not that hard – just give it a try. As well, keep in mind that you can make brief notes reminding you of things that are of interest. With a look on your note sheet they will return to your memory in case you forgot about them.</p>
 <h2 id="how-exactly-would-you-do-it">How exactly would you do it?</h2>
 <p>After you ask a question, participants will sometimes answer <em>»in general«</em></p>
 <blockquote>
@@ -877,7 +877,7 @@ This is useful when designing, since you can refer to the title instead of consi
 <li><em>Data:</em> Browses through the book to see…</li>
 </ul>
 </blockquote>
-<p>This is a rather simplified overview of the process: In contrast to this example you will as well spend time searching through data, rewriting theme titles and may need as well to step back or sleep over it to find a good new way to make sense of your data.</p>
+<p>This is a rather simplified overview of the process: In contrast to this example, you will as well spend time searching through data, rewriting theme titles and may need as well to step back or just sleep over it to find a good new way to make sense of your data.</p>
 <h2 id="create-meaningful-groups">Create meaningful groups</h2>
 <p>I already talked about grouping data by shared themes. The question is: What is a <em>meaningful</em> theme?</p>
 <p>One method to group data and to derive a theme would be going through the data and see which utterances and observations mention the same thing or the same assessment. Thus, all notes mentioning »color« would belong to one theme and get the title »Color«; all notes mentioning »good« belong to one theme and get the title »good things«.</p>
